grammar.js
        stored_definition: $ => seq(
            optional($.BOM),
            optional(
                seq(
                    "within",
                    optional(field("name", $.name)),
                    ";")
            ),
            repeat(
                seq(
                    optional(field("final", "final")),
                    field("classDefinition", $.class_definition),
                    ";"
                )
            )
        ),

        // A.2.2 Class Definition

        class_definition: $ => seq(
            optional(field("encapsulated", "encapsulated")),
            field("classPrefixes", $.class_prefixes),
            field("classSpecifier", $.class_specifier)
        ),

        class_prefixes: $ => seq(
            optional(field("partial", "partial")),
            choice(
                field("class", "class"),
                field("model", "model"),
                seq(
                    optional(field("operator", "operator")),
                    field("record", "record")),
                field("block", "block"),
                seq(
                    optional(field("expandable", "expandable")),
                    field("connector", "connector")),
                field("type", "type"),
                field("package", "package"),
                seq(
                    optional(choice(field("pure", "pure"), field("impure", "impure"))),
                    optional(field("operator", "operator")),
                    field("function", "function")),
                field("operator", "operator")
            )
        ),

        long_class_specifier: $ => choice(
            seq(
                field("identifier", $.IDENT),
                optional(field("descriptionString", $.description_string)),
                field("composition",
                    seq(
                        optional($.element_list),
                        repeat(
                            choice(
                                seq("public", optional($.element_list)),
                                seq("protected", optional($.element_list)),
                                $.equation_section,
                                $.algorithm_section
                            )
                        ),
                        optional(
                            seq(
                                "external",
                                $.language_specification
                            )
                        ),
                        optional(
                            seq(
                                $.external_function_call,
                                $.annotation_clause,
                                ";"
                            )
                        ),
                        optional(
                            seq(
                                $.annotation_clause,
                                ";"
                            )
                        )
                    ),
                ),
                "end",
                field("endIdentifier", $.IDENT)
            ),
            seq(
                "extends",
                field("identifier", $.IDENT),
                field("classModification", $.class_modification),
                optional(field("descriptionString", $.description_string)),
                field("composition",
                    seq(
                        optional($.element_list),
                        repeat(
                            choice(
                                seq("public", optional($.element_list)),
                                seq("protected", optional($.element_list)),
                                $.equation_section,
                                $.algorithm_section
                            )
                        ),
                        optional(
                            seq(
                                "external",
                                $.language_specification
                            )
                        ),
                        optional(
                            seq(
                                $.external_function_call,
                                $.annotation_clause,
                                ";"
                            )
                        ),
                        optional(
                            seq(
                                $.annotation_clause,
                                ";"
                            )
                        )
                    ),
                ),
                "end",
                field("endIdentifier", $.IDENT)
            )
        ),

        enum_list: $ => seq(
            field("enumerationLiteral", $.enumeration_literal),
            repeat(seq(",", field("enumerationLiteral", $.enumeration_literal)))
        ),

        enumeration_literal: $ => seq(
            field("identifier", $.IDENT),
            field("description", seq(
                optional(field("descriptionString", $.description_string)),
                optional(field("annotationClause", $.annotation_clause))
                )
            )
        ),

        // composition can be empty, so it's integrated in long_class_specifier

        element_list: $ => repeat1(
            seq(field("element", $.element), ";")
        ),

        component_clause: $ => seq(
            field("typePrefix",
                seq(
                optional(
                    choice(
                        field("flow", "flow"),
                        field("stream", "stream"))),
                optional(choice(
                    field("discrete", "discrete"),
                    field("parameter", "parameter"),
                    field("constant", "constant"))),
                optional(choice(
                    field("input", "input"),
                    field("output", "output"))),
            )),
            field("typeSpecifier", $.type_specifier),
            optional(field("subscripts", $.array_subscripts)),
            field("componentDeclarations", $.component_list)
        ),

        // type-prefix can be empty, so it is integrated into component_clause

        component_list: $ => seq(
            field("componentDeclaration", $.component_declaration),
            repeat(seq(",", field("componentDeclaration", $.component_declaration)))
        ),

        component_declaration: $ => seq(
            field("declaration", $.declaration),
            optional(field("conditionAttribute", $.condition_attribute)),
            field("description", seq(
                optional(field("descriptionString", $.description_string)),
                optional(field("annotationClause", $.annotation_clause))
            ))
        ),

        declaration: $ => seq(
            field("identifier", $.IDENT),
            optional(field("subscripts", $.array_subscripts)),
            optional(field("modification", $.modification))
        ),

        // A.2.5 Modification

        modification: $ => choice(
            seq(
                field("classModification", $.class_modification),
                optional(seq("=", field("expression", $.expression)))
            ),
            seq(choice("=", ":="), field("expression", $.expression))
        ),

        equation_section: $ => prec.left(seq(
            optional(field("initial", "initial")),
            "equation",
            field("equations", repeat(seq(field("equation", $.equation), ";")))
        )),

        expression: $ => choice(
            $.simple_expression,
            $._if_expression
        ),

        _if_expression: $ => seq(
            "if", field("condition", $.expression),
            "then", field("thenExpression", $.expression),
            repeat(field("elseIfClause", $._else_if_clause)),
            "else", field("elseExpression", $.expression)
        ),

        simple_expression: $ => seq(
            $.logical_expression,
            optional(seq(
                ":",
                $.logical_expression,
                optional(seq(
                    ":",
                    $.logical_expression,
                ))
            ))
        ),

        type_specifier: $ => seq(
            optional(field("global", ".")),
            field("name", $.name)
        ),

        name: $ => prec.left(choice(
            seq(field("qualifier", $.name), ".", field("identifier", $.IDENT)),
            field("identifier", $.IDENT)
        )),

        component_reference: $ => prec.left(choice(
            seq(
                field("qualifier", $.component_reference), ".", field("identifier", $.IDENT), optional(field("subscripts", $.array_subscripts))
            ),
            seq(
                optional(field("global", ".")), field("identifier", $.IDENT), optional(field("subscripts", $.array_subscripts))
            )
        )),

        function_call_args: $ => seq(
            "(",
            field("arguments", $.function_arguments),
            ")"
        ),

        function_arguments: $ => choice(
            seq(
                $.expression,
                optional(
                    choice(
                        seq(".", $.function_arguments_non_first),
                        seq("for", $.for_indices)
                ))
            ),
            seq(
                $.function_partial_application,
                optional(seq(",", $.function_arguments_non_first))
            ),
            $.named_arguments
        ),

        array_subscripts: $ => seq(
            "[",
            field("subscript", $.subscript),
            repeat(seq(",", field("subscript", $.subscript))),
            "]"
        ),

        subscript: $ => choice(
            ":",
            field("expression", $.expression)
        ),

        // description can be empty

        description_string: $ => seq(
            field("value", $.STRING), repeat(seq("+", field("value", $.STRING)))
        ),
